k8s-deployments/02-ci-pipeline/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ci-pipeline
spec:
  replicas: SPECIFIED_BY_OVERLAYS
  template:
    spec:
      containers:
        - name: gitops-test-env
          image: ghcr.io/lukma99/gitops-test-env:SPECIFIED_BY_OVERLAYS
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: configmap
              mountPath: "/usr/src/app/configmap"
              readOnly: true
      volumes:
        - name: configmap
          configMap:
            name: ci-pipeline
