k8s-deployments/02-ci-pipeline/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ci-pipeline
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
